Alignment repair on the filter component

--- a/src/components/Filters/style.css
+++ b/src/components/Filters/style.css
@@ -2,6 +2,7 @@
 .filter_container{
   margin-top: 40px ;
   margin-bottom: 20px;
+  padding: 0;
 }
 
 .filter_button{
